Moved classes, changed hashing to argon2 and added proper password encryption